<resources>
    <string name="app_name">PSUInterface</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for menu -->
    <string name="menu_status">Status</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_launch_job">Launch job</string>
    <string name="menu_statistics">Statistics</string>

    <!-- Strings with formatting -->
    <string name="profile_info">%1$s - %2$s - %3$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
