<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_status"
            android:title="@string/menu_status"
            />
        <item
            android:id="@+id/nav_profiles"
            android:icon="@drawable/ic_menu_profiles"
            android:title="@string/menu_profiles"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"
            />
        <item
            android:id="@+id/nav_launch_job"
            android:icon="@drawable/ic_menu_launch_job"
            android:title="@string/menu_launch_job"
            />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/menu_statistics"
            />
    </group>

</menu>
